--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   minion-backend:
     build:
       context: .
-      dockerfile: Dockerfile-backend-dev
+      dockerfile: Dockerfile-backend
     depends_on:
       - mongodb
       - rabbitmq
